change lblAlpha to txtAlpha in LayerManageVC

--- a/fp-image-processor-ios/Base.lproj/Main.storyboard
+++ b/fp-image-processor-ios/Base.lproj/Main.storyboard
@@ -868,7 +868,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="vef-fq-dCm">
-                                <rect key="frame" x="16" y="133" width="343" height="140.5"/>
+                                <rect key="frame" x="16" y="133" width="343" height="150"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="WWy-rr-LXp">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="20.5"/>
@@ -905,24 +905,24 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="otL-ek-hfV">
-                                        <rect key="frame" x="0.0" y="73" width="343" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="73" width="343" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alpha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rwC-pp-eig">
-                                                <rect key="frame" x="0.0" y="0.0" width="171.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="171.5" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UZt-R6-yMV">
-                                                <rect key="frame" x="171.5" y="0.0" width="171.5" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a4l-p0-0vU">
+                                                <rect key="frame" x="171.5" y="0.0" width="171.5" height="30"/>
                                                 <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="dWw-x2-mjs">
-                                        <rect key="frame" x="0.0" y="109.5" width="343" height="31"/>
+                                        <rect key="frame" x="0.0" y="119" width="343" height="31"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Active" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="stU-u3-aeX">
                                                 <rect key="frame" x="0.0" y="0.0" width="171.5" height="31"/>
@@ -941,7 +941,7 @@
                                 </subviews>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tuP-sk-7Sl">
-                                <rect key="frame" x="0.0" y="273.5" width="375" height="393.5"/>
+                                <rect key="frame" x="0.0" y="283" width="375" height="384"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -961,11 +961,11 @@
                         <viewLayoutGuide key="safeArea" id="I8U-cr-D7Z"/>
                     </view>
                     <connections>
-                        <outlet property="lblAlpha" destination="UZt-R6-yMV" id="ZJq-mH-nnZ"/>
                         <outlet property="lblId" destination="lrX-3n-1be" id="mDL-lV-TRS"/>
                         <outlet property="lblImg" destination="7oF-Tr-VhD" id="BNw-xD-l2b"/>
                         <outlet property="switchActive" destination="2Ey-ur-MbF" id="qx4-Dq-C1p"/>
                         <outlet property="tableView" destination="tuP-sk-7Sl" id="8JI-WL-lIL"/>
+                        <outlet property="txtAlpha" destination="a4l-p0-0vU" id="fcI-lt-2C3"/>
                         <segue destination="ENm-dt-E7I" kind="show" identifier="showSelectionManage" id="a6b-kM-3Rb"/>
                     </connections>
                 </viewController>
